Final commit before animating

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/spinningDancer.js"></script>
+    <script src="src/jumpingDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">blinkyboy</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">blinkyboy</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeSpinningDancer">spinnyboy</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeJumpingDancer">jumpyboy</a>
+    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
