--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,9 +14,13 @@
       window.mochaPhantomJS ? mochaPhantomJS.run() : mocha.run();
     });
   </script>
+  <script src="spec/jumpingDancerSpec.js"></script>
+  <script src="spec/spinningDancerSpec.js"></script>
   <script src="spec/blinkyDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
+  <script src="src/jumpingDancer.js"></script>
+  <script src="src/spinningDancer.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
