--- a/dancefloor.html
+++ b/dancefloor.html
@@ -11,10 +11,10 @@
   </head>
   <body>
     <div class="topbar">
-      <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">blinkyboy</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeSpinningDancer">spinnyboy</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeJumpingDancer">jumpyboy</a>
+      <span class="title">Dance Party!</span>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">Blinker</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeSpinningDancer">Spinner</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeJumpingDancer">Jumper</a>
     </div>
     <script src="src/init.js"></script>
   </body>
